--- a/main.html
+++ b/main.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Java Script</title>
-</head>
-<body>
-<style>
-    * {
+  </head>
+  <body>
+    <style>
+      * {
         padding: 0;
         margin: 0;
         box-sizing: border-box;
-    }
-    html, body {
+      }
+      html,
+      body {
         height: 100vh;
-    }
-    body {
+      }
+      body {
         font-family: sans-serif;
         display: flex;
         align-items: center;
         justify-content: center;
-    }
-    a {
+      }
+      a {
         text-decoration: none;
         color: black;
         font-size: 40px;
@@ -31,31 +32,31 @@
         display: flex;
         align-items: center;
         justify-content: center;
-    }
-    a:hover {
+      }
+      a:hover {
         background-color: brown;
         color: white;
         transition: 1s ease-out;
-    }
-    .container {
+      }
+      .container {
         display: flex;
         justify-content: center;
         align-items: center;
         gap: 50px;
         flex-wrap: wrap;
         padding: 0 30px;
-    }
-</style>
-<div class="container">
-    <a href="./kvadrat/index.html">Kvadrat.</a>
-    <a href="./tortburchak/third.html">To'g'ri tortburchak.</a>
-    <a href="./aylana/twice.html">Aylana.</a>
-    <a href="./kub/index.html">Kub.</a>
-    <a href="./paralapiped/index.html">Paralapiped.</a>
-    <a href="./doira/index.html">Doira.</a>
-    <a href="./arifmetik/index.html">O'rta arifmetik.</a>
-    <a href="./aylana2/index.html">Aylana yuzalari.</a>
-    <a href="./temperatura/index.html">Temperatura.</a>
-</div>
-</body>
+      }
+    </style>
+    <div class="container">
+      <a href="./kvadrat/index.html">Kvadrat.</a>
+      <a href="./tortburchak/third.html">To'g'ri tortburchak.</a>
+      <a href="./aylana/twice.html">Aylana.</a>
+      <a href="./kub/index.html">Kub.</a>
+      <a href="./paralapiped/index.html">Paralapiped.</a>
+      <a href="./doira/index.html">Doira.</a>
+      <a href="./arifmetik/index.html">O'rta arifmetik.</a>
+      <a href="./aylana2/index.html">Aylana yuzalari.</a>
+      <a href="./temperatura/index.html">Temperatura.</a>
+    </div>
+  </body>
 </html>
